[package]
name = "philharmonic-connector-service"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/philharmonic-connector-service"
description = "Service framework for per-realm Philharmonic connector binaries: token verification, payload decryption, Implementation-trait registry and dispatch."

[dependencies]
ciborium = "0.2"
coset = "0.4"
ed25519-dalek = "2"
philharmonic-connector-common = "0.1"
philharmonic-types = "0.3.5"
sha2 = "0.11"
subtle = "2"
thiserror = "2"

[dev-dependencies]
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = true
